--- a/oj-gateway9001/pom.xml
+++ b/oj-gateway9001/pom.xml
@@ -44,6 +44,12 @@
             <scope>provided</scope>
             <version>1.18.30</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
