--- a/oj-user8001/src/main/resources/application.yml
+++ b/oj-user8001/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
         server-addr: localhost:8848
         group: GROUP
   config:
-    import: nacos:oj-user-service-dev.yaml?group=DEFAULT_GROUP
+    import[0]: nacos:oj-user-service-dev.yaml?group=DEFAULT_GROUP
+    import[1]: nacos:oj-common-service-dev.yaml?group=GROUP
 
 
 
