--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>oj-user8001</module>
         <module>oj-gateway9001</module>
         <module>oj-user8002</module>
+        <module>oj-question8011</module>
     </modules>
 
     <properties>
