--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,16 @@
         <spring.boot.version>3.2.0</spring.boot.version>
         <spring.cloud.version>2023.0.0</spring.cloud.version>
         <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
+        <pagehelper>1.3.0</pagehelper>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper}</version>
+            </dependency>
             <!-- springboot 3.2.0 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
