--- a/oj-user8001/src/main/resources/application.yml
+++ b/oj-user8001/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         group: GROUP
   config:
     import[0]: nacos:oj-user-service-dev.yaml?group=DEFAULT_GROUP
-    import[1]: nacos:oj-common-service-dev.yaml?group=GROUP
+    import[1]: nacos:oj-common-dev.yaml?group=DEFAULT_GROUP
 
 
 
