--- a/oj-codeSandBox8031/pom.xml
+++ b/oj-codeSandBox8031/pom.xml
@@ -19,6 +19,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.wht.oj2025</groupId>
             <artifactId>project-common</artifactId>
             <version>1.0-SNAPSHOT</version>
