--- a/oj-codeSandBox8031/src/main/resources/application.yml
+++ b/oj-codeSandBox8031/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
       discovery:
         server-addr: localhost:8848
         group: GROUP
+  rabbitmq:
+    host: localhost
+    port: 15672
+    password: guest
+    username: guest
   config:
     import[0]: nacos:oj-common-dev.yaml?group=DEFAULT_GROUP
