--- a/mapper-generator/src/main/resources/config.properties
+++ b/mapper-generator/src/main/resources/config.properties
@@ -2,5 +2,5 @@ package.name =com.wht.oj2025
 
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/oj_user?useUnicode=true&characterEncoding=utf-8&useSSL=false
-jdbc.user=root
-jdbc.password=wht20020930
+jdbc.user=
+jdbc.password=
